# aoc2021

./: aoc2021.cabal
day1/: sonar.hs
day2/: dive.hs
day3/: diagnostic.hs
day4/: bingo.hs
src/: Util.hs
src/Day01/: Sonar.hs
src/Day02/: Dive.hs
src/Day03/: Diagnostic.hs
src/Day04/: Bingo.hs
src/Day05/: Thermals.hs
src/Day06/: Lanternfish.hs
src/Day07/: Crabs.hs
src/Day08/: Display.hs
src/Day09/: Smoke.hs
src/Day10/: Syntax.hs
src/Day11/: Octopus.hs
src/Day12/: Pathing.hs
src/Day13/: Origami.hs
src/Day14/: Polymerization.hs
src/Day15/: Chiton.hs
src/Day16/: Decoder.hs
src/Day17/: Shot.hs
src/Day18/: Snailfish.hs
src/Day19/: Scanner.hs
src/Day20/: Pixels.hs
src/Day3/: Diagnostic.hs
src/Day5/: Thermals.hs
src/Day6/: Lanternfish.hs
src/Day7/: Crabs.hs
src/Day8/: Display.hs
src/Day9/: Smoke.hs
