cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0
author:             zfnmxt
maintainer:         zfnmxt@zfnmxt.com
library
    exposed-modules:
      Util
      Day1.Sonar
      Day2.Dive
      Day3.Diagnostic
      Day4.Bingo
      Day5.Thermals
      Day6.Lanternfish
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      array
    hs-source-dirs:   src
    default-language: Haskell2010
