cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0
author:             zfnmxt
maintainer:         zfnmxt@zfnmxt.com
library
    exposed-modules:
      Util
      Day01.Sonar
      Day02.Dive
      Day03.Diagnostic
      Day04.Bingo
      Day05.Thermals
      Day06.Lanternfish
      Day07.Crabs
      Day08.Display
      Day09.Smoke
      Day10.Syntax
      Day11.Octopus
      Day12.Pathing
      Day13.Origami
      Day14.Polymerization
      Day15.Chiton
      Day16.Decoder
      Day17.Shot
      Day18.Snailfish
      Day19.Scanner
      Day20.Pixels
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      array,
                      PSQueue,
                      matrix,
                      vector
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: TupleSections
